# Retrieval-Is-Not-Always-Needed

./: .gitignore  HANDOVER_v2.md  LICENSE  NOTICE  ORIGIN.md  README.md  RINA_CHECKLIST.md  _test_save.py  check_cuda_env.py  compile_test.py  demo_rom.sh  demo_routing.sh  dev.bat  eval_all.sh  gen_temp_test.txt  gen_test_output.txt  kernels.py  kernels_train.py  reproduce.bat  requirements.txt  setup.sh
archive/: dl_wkv.py  gen_test_91m.py  reproduce_experiments.py  rwkv7_clampw.cpp  rwkv7_clampw.cu  test_independent_states.py  test_wkv7.py
checkpoints/: code_ep1_log.csv  code_seq128_log.csv  code_seq256_log.csv  fineweb_ep1_log.csv  fineweb_ep2_log.csv  fineweb_ep3_log.csv  mohe_16m_indep.csv  mohe_74m.csv  mohe_91m.csv  mohe_hybrid_16m.csv  mohe_large.csv  mohe_run1.csv  mohe_rwkv_16m.csv  mohe_transferred.csv  mohe_transferred_v2.csv  mohe_transferred_v3.csv  rina_37m_ep1.csv
config/: default.json
docs/: ARCH.md  RINA_实验总览.md  RINA实验日志.md  compute_estimate.md
experiments/: README.md  attractor_plus_attnslot.py  chat.py  confidence_gate.py  download_chinese.py  download_chinese_v2.py  download_dclm.py  download_dclm_v2.py  download_english.py  download_mamba.py  download_math.py  download_math_v2.py  download_starcode.py  download_starcode_v2.py  force_attractor.py  generate.py  merge_sft.py  mix_data.py  mix_data_v2.py  mix_data_v3.py  mohe_83m_run.py  mohe_91m_run.py  mohe_hybrid_test.py  mohe_large_run.py  mohe_rwkv_test.py  mohe_transferred_cloud.py  mohe_transferred_train.py  pos_aware_slot.py  precise_recall.py  prepare_data_rwkv.py  prepare_python_data.py  prepare_python_pretrain.py  random_init_test.py  retokenize.py  rom_inject.py  rom_test.py  rwkv_v7_demo.py  sft_lora.py  slot_gate_test.py  slot_gradient_test.py  (+5 more)
kernels/: rwkv7_clampw.cpp  rwkv7_clampw.cu  rwkv7_clampw_pp.cu  rwkv7_cu_pp.cu  rwkv_v7_model.py  wkv7_fp32.cpp  wkv7_fp32.cu
modules/: temporal_snn_cell.py
rina/: __init__.py  cell.py  config.py  data.py  drift.py  eval_multi.py  gen.py  model.py  model_a.py  model_c.py  model_cf.py  model_int4.py  model_jamba.py  model_jamba_dr.py  model_jamba_lq.py  model_jamba_qw.py  model_jamba_qw2.py  model_jamba_qw3.py  model_l3x.py  model_l3x_v2.py  model_v5.py  mohe.py  niah.py  official_model.py  rom.py  rwkv_tokenizer.py  rwkv_v7_demo.py  sample.py  scan.py  slot.py  test_jamba.py  train.py  train_a.py  train_a_cont.py  train_a_seq1024.py  train_a_v2.py  train_ac.py  train_alpaca_lora.py  train_ar.py  train_c.py  (+24 more)
rina-engine/: CMakeLists.txt
rina-engine/eval/: eval_ppl.cpp
rina-engine/examples/: rina-jamba-qw2.json
rina-engine/src/: gguf_llama_runtime.cpp  gguf_llama_runtime.h  gguf_rina_bridge.cpp  gguf_rina_bridge.h  loader.cpp  loader_gguf.cpp  loader_hf.cpp  main.cpp  model.h  model_forward_v2.cu  model_fp32.cu  model_infer.cu  model_pytorch.cpp  model_train_v2.cu  model_v2.cu  model_v2_ctx.h  train_fp32.cu
rina-engine/src/arch/: register_layers.cu
rina-engine/src/arch/gqa/: gqa_layer.cu  gqa_layer.h
rina-engine/src/arch/mla/: deepseek_mla_layer.cu  mla_layer.cu  mla_layer.h  rina_mla_layer.cu  rina_mla_layer.h
rina-engine/src/arch/ssm/: rina_ssm_layer.cu  rina_ssm_layer.h  ssm_layer.cu  ssm_layer.h
rina-engine/src/core/: buffer.cpp  buffer.h  config.h  kernel_api.h  layer.cpp  layer.h  layer_fp32.h  layers_fp32.cpp  memory_pool.h  quant.h  sparse_index.h  tape.cpp  tape.h  tensor.h  tokenizer.cpp  tokenizer.h
rina-engine/src/infer/: infer_base.h  infer_gqa.cpp  infer_mla.cpp  infer_shared.cpp
rina-engine/src/kernels/: activation_fp32.cu  build_qkv_fp32.cu  embedding.cu  flash_fp32.cu  gemm.cuh  linear_fp32.cu  linear_q2k.cu  linear_q4.cu  loss_fp32.cu  norm_fp32.cu  optimizer_fp32.cu  pytorch_ln_kernel.cu  quantize.cu  rms_norm.cu  rope.cu  rope_fp32.cu  rope_fp32_hf.cu  silu_fp32.cu  sparse_attn.cu  ssm_kernels_fp32.cu  ssm_lsc_scan.cu  tensor_utils.cu
rina-engine/src/llama_kernels/: ggml-cuda.cu  ggml_stub.h  mmq.cu  rina_backend.cu  rina_llama_mmvq.cu  rina_mmq_decls.h  rina_mmq_dispatch.cu  rina_mmq_wrapper.cu  rina_wrapper.cu  ssm-cumscan.cu  ssm-cumscan.cuh
rina-engine/src/loader/: gguf_reader.cpp  gguf_reader.h  loader_base.h  loader_gqa.cpp  loader_mla.cpp  loader_shared.cpp
rina-engine/src/ops/: build_qkv.cu  embedding.cu  embedding.h  linear.cu  linear.h  rms_norm.cu  rms_norm.h  rope.cu  rope.h  saxpy.cu  saxpy.h  silu_mul.cu  silu_mul.h
rina-engine/src/training/: train.cu  train.h
rina-engine/tests/: align_debug.cu  align_gqa_layer.cu  align_llama.cu  check_llama.cu  fa_test.cu  test_a_align.cu  test_align.cu  test_bf16_align.cu  test_bf16_bench.cu  test_bf16_single.cu  test_gradcheck.cu  test_infer.cu  test_jamba_align.cu  test_jamba_compare_fwd.cu  test_jamba_fwd_dump.cu  test_jamba_mla_step.cu  test_jamba_step.cu  test_layers.cu  test_linear_direct.cu  test_linear_m3.cu  test_linear_q4.cu  test_llama.cu  test_llama_dbg.cu  test_load.cu  test_loader.cc  test_mla_align.cu  test_mla_v2.cu  test_save_ptr.cu  test_ssm_debug.cu  test_ssm_weights.cu  test_train.cu  test_v2_train.cu  test_verify_weights.cu
rina-engine/tools/: align_100.py  align_a.py  align_a_full.py  align_full.py  align_jamba_full.py  align_jamba_mla.py  align_jamba_step.py  align_llama.py  calibrate.py  compare_gguf_runtime.py  convert_a_to_rinn.py  convert_a_v2.py  convert_jamba_to_rinn.py  convert_llama_to_rinn.py  convert_to_rinn.py  gradcheck_ref.py  infer_compare.py  infer_compare_jamba.py  load_hf.py  pt_ref.py  q4_pack.py  rina-run  run.py  test_gguf_phase1.py  train_align.py
scripts/: bench_code_ppl.py  bench_gpt2_niah_toy.py  bench_mamba_130m.py  bench_niah_extreme.py  bench_niah_multikey.py  bench_niah_multikey_gpt2.py  bench_niah_multikey_llama.py  bench_niah_realtext.py  bench_niah_semantic.py  bench_niah_slot.py  bench_niah_snn_final.py  bench_niah_snn_realtext.py  bench_niah_snn_slot.py  bench_ppl_fineweb.py  bench_rina_multikey.py  bench_seqlen.py  bench_seqlen_all.py  bench_vs_gpt2_124m.py  bench_wikitext_valid.py  download_dclm.sh  generate.py  test_generation_stability.py  train.py  train_cann_15m_slotaware.py  (+15 more)
(+281 files in other folders)
